apppython/k8s-test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appphyton-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: apppython
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apppython
            port:
              number: 8081
